--- a/Formulier/formulier.html
+++ b/Formulier/formulier.html
@@ -99,7 +99,7 @@ Voor vragen of opmerkingen kunt u <a href="contact">contact</a> met ons opnemen.
 		<fieldset>
 			<legend>Het project is geschikt voor</legend>
 			<select>
-				<option disabled selected required>-- Selecteer een optie --</option>
+				<option disabled selected>-- Selecteer een optie --</option>
 				<option value="project_eerstejaarsstudenten">Tweedejaars studenten</option>
 				<option value="project_tweedejaarsstudenten">Afstudeer studenten</option>
 				<option value="project_derdejaarsstudenten">Afstudeer studenten</option>
@@ -118,7 +118,7 @@ Voor vragen of opmerkingen kunt u <a href="contact">contact</a> met ons opnemen.
 		<fieldset>
 			<legend>Het project is geschikt voor</legend>
 			<select>
-				<option disabled selected required>-- Selecteer een optie --</option>
+				<option disabled selected>-- Selecteer een optie --</option>
 				<option value="stage_tweedejaarsstudenten">Tweedejaars studenten</option>
 				<option value="stage_afstudeerstudenten">Afstudeer studenten</option>
 				<option value="stage_onbekend">Onbekend</option>
