--- a/Formulier/formulier.html
+++ b/Formulier/formulier.html
@@ -98,7 +98,7 @@ Voor vragen of opmerkingen kunt u <a href="contact">contact</a> met ons opnemen.
 		</fieldset>
 		<fieldset>
 			<legend>Het project is geschikt voor</legend>
-			<select>
+			<select required>
 				<option disabled selected>-- Selecteer een optie --</option>
 				<option value="project_eerstejaarsstudenten">Tweedejaars studenten</option>
 				<option value="project_tweedejaarsstudenten">Afstudeer studenten</option>
@@ -117,7 +117,7 @@ Voor vragen of opmerkingen kunt u <a href="contact">contact</a> met ons opnemen.
 		<h3>Ik wil mij aanmelden als stagebedrijf</h3>
 		<fieldset>
 			<legend>Het project is geschikt voor</legend>
-			<select>
+			<select required>
 				<option disabled selected>-- Selecteer een optie --</option>
 				<option value="stage_tweedejaarsstudenten">Tweedejaars studenten</option>
 				<option value="stage_afstudeerstudenten">Afstudeer studenten</option>
