--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!-- header met logo & navigatie -->
         <header>
-            <h1>CMD Amsterdam - Intranet</h1>
+            <h1>CMD Amsterdam<span> - Intranet</span></h1>
             <p>Communication and Multimedia Design is een ontwerpopleiding voor interactieve media in Amsterdam.</p>
             <form method="get" action="Artikelpagina.html">
                 <label>
